--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="isLoading" class="spinner-container">
+<div *ngIf="loader$ | async" class="spinner-container">
 	<mat-spinner class="spiner-loader" color="primary"></mat-spinner>
 </div>
