--- a/src/app/classroom/students/components/student-list/student-list.component.html
+++ b/src/app/classroom/students/components/student-list/student-list.component.html
@@ -1,62 +1,67 @@
-<ng-template #showSkeleton>
-  <!-- <h1>LOADING</h1> -->
-</ng-template>
-
-<section class="container container-padd" *ngIf="data$ | async as studentList else showSkeleton">
+<section class="container container-padd">
   <div class="container-max sm">
 
-    <a13-student-filters *ngIf="studentList?.length" [studentList]="studentList" (studentListFilter)="agroupStudents($event)"></a13-student-filters>
+    <ng-template #studentListSkeleton>
+      <ng-container class="skeleton" *ngFor="let loader of skeleton.listSmall">
+        <ngx-skeleton-loader fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
+      </ng-container>
+    </ng-template>
 
-    <!-- Students list-->
-    <div *ngIf="studentListFiltered?.length">
+    <div *ngIf="data$ | async as studentList else studentListSkeleton">
 
-      <!-- Favorites -->
-      <div class="mb-1" *ngIf="favoriteListFiltered.length">
-        <button mat-button color="primary" (click)="showMore('favorite')">
-          {{toggleConfig.favorite.text | translate}}
-          <span class="translucide"> | {{favoriteListFiltered.length}}</span>
-          <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.favorite.icon"></fa-icon>
-        </button>
-        <ng-container *ngIf="toggleConfig.favorite.show">
-          <ng-container *ngFor="let student of favoriteListFiltered">
-            <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
+      <a13-student-filters *ngIf="studentList?.length" [studentList]="studentList" (studentListFilter)="agroupStudents($event)"></a13-student-filters>
+
+      <!-- Students list-->
+      <div *ngIf="studentListFiltered?.length">
+
+        <!-- Favorites -->
+        <div class="mb-1" *ngIf="favoriteListFiltered.length">
+          <button mat-button color="primary" (click)="showMore('favorite')">
+            {{toggleConfig.favorite.text | translate}}
+            <span class="translucide"> | {{favoriteListFiltered.length}}</span>
+            <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.favorite.icon"></fa-icon>
+          </button>
+          <ng-container *ngIf="toggleConfig.favorite.show">
+            <ng-container *ngFor="let student of favoriteListFiltered">
+              <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
+            </ng-container>
           </ng-container>
-        </ng-container>
+        </div>
+
+        <!-- Rest students -->
+        <div class="mb-1" *ngIf="restListFiltered.length">
+          <button mat-button class="mat-hint" (click)="showMore('rest')">
+            {{toggleConfig.rest.text | translate}}
+            <span class="translucide"> | {{restListFiltered.length}}</span>
+            <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.rest.icon"></fa-icon>
+          </button>
+          <ng-container *ngIf="toggleConfig.rest.show">
+            <ng-container *ngFor="let student of restListFiltered">
+              <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
+            </ng-container>
+          </ng-container>
+        </div>
+
+        <!-- Archived students -->
+        <div class="mb-1" *ngIf="archiveListFiltered.length">
+          <button mat-button color="warn" (click)="showMore('archived')">
+            {{toggleConfig.archived.text | translate}}
+            <span class="translucide"> | {{archiveListFiltered.length}}</span>
+            <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.archived.icon"></fa-icon>
+          </button>
+          <ng-container *ngIf="toggleConfig.archived.show">
+            <ng-container *ngFor="let student of archiveListFiltered">
+              <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
+            </ng-container>
+          </ng-container>
+        </div>
       </div>
 
-      <!-- Rest students -->
-      <div class="mb-1" *ngIf="restListFiltered.length">
-        <button mat-button class="mat-hint" (click)="showMore('rest')">
-          {{toggleConfig.rest.text | translate}}
-          <span class="translucide"> | {{restListFiltered.length}}</span>
-          <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.rest.icon"></fa-icon>
-        </button>
-        <ng-container *ngIf="toggleConfig.rest.show">
-          <ng-container *ngFor="let student of restListFiltered">
-            <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
-          </ng-container>
-        </ng-container>
-      </div>
+      <!-- Empty list messages -->
+      <a13-empty-list *ngIf="studentList" [list]="studentList" [listFiltered]="studentListFiltered" listMessage="MSG.STUDENT_LIST_EMPTY" listFilteredMessage="MSG.NO_MORE_STUDENTS"></a13-empty-list>
 
-      <!-- Archived students -->
-      <div class="mb-1" *ngIf="archiveListFiltered.length">
-        <button mat-button color="warn" (click)="showMore('archived')">
-          {{toggleConfig.archived.text | translate}}
-          <span class="translucide"> | {{archiveListFiltered.length}}</span>
-          <fa-icon class="ml-q mat-icon-14" [icon]="toggleConfig.archived.icon"></fa-icon>
-        </button>
-        <ng-container *ngIf="toggleConfig.archived.show">
-          <ng-container *ngFor="let student of archiveListFiltered">
-            <a13-student-card [(student)]="student" [fromUrl]="router.url"></a13-student-card>
-          </ng-container>
-        </ng-container>
-      </div>
+      <!-- Floating button -->
+      <a13-floating-button [pulse]="!studentList?.length" text="ADD_STUDENT" tooltip="ADD_STUDENT" icon="user-plus" (click)="createStudent()"></a13-floating-button>
     </div>
-
-    <!-- Empty list messages -->
-    <a13-empty-list *ngIf="studentList" [list]="studentList" [listFiltered]="studentListFiltered" listMessage="MSG.STUDENT_LIST_EMPTY" listFilteredMessage="MSG.NO_MORE_STUDENTS"></a13-empty-list>
-
-    <!-- Floating button -->
-    <a13-floating-button [pulse]="!studentList?.length" text="ADD_STUDENT" tooltip="ADD_STUDENT" icon="user-plus" (click)="createStudent()"></a13-floating-button>
   </div>
 </section>
