--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -23,7 +23,9 @@ $colors: (
     warn                : $tertiary-color,
     background          : #f4f7fd,
     foreground          : #222,
-    white-light         : #f5f5f5
+    white-light         : #f5f5f5,
+    // loader              : #eaeaea,
+    loader              : darken(#f4f7fd, 4%)
   ),
   dark-theme: (
     primary             : $main-color,
@@ -33,7 +35,8 @@ $colors: (
     warn                : $tertiary-color,
     background          : #333,
     foreground          : #bbbfc2,
-    black-light         : #111
+    black-light         : #111,
+    loader              : #383838,
   ),
   other: (
     link-color          : $main-color,
@@ -42,7 +45,7 @@ $colors: (
     info-color          : #5faef7,
     warning-color       : #f7ba5f,
     error-color         : #f75f5f,
-    input-color         : rgba(34, 34, 34, 0.039)
+    input-color         : rgba(34, 34, 34, 0.039),
   )
 );
 
