--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -6,11 +6,11 @@
       <ng-template #daySkeleton>
         <div fxLayout="row" fxLayoutAlign="start center" class="skeleton container-max sm mt-h">
           <div>
-            <ngx-skeleton-loader count="1" appearance="circle" [animation]="skeleton.animation" [theme]="skeleton.circleSmall.theme"></ngx-skeleton-loader>
+            <ngx-skeleton-loader class="skeleton" count="1" appearance="circle" [animation]="skeleton.animation" [theme]="skeleton.circleSmall.theme"></ngx-skeleton-loader>
           </div>
           <div fxFlex="100">
             <ng-container *ngFor="let loader of skeleton.linesSmall">
-              <ngx-skeleton-loader fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
+              <ngx-skeleton-loader class="skeleton" fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
             </ng-container>
           </div>
         </div>
@@ -52,8 +52,8 @@
 
         <!-- Skeleton -->
         <ng-template #dayContentSkeleton>
-          <ng-container class="skeleton" *ngFor="let loader of skeleton.text">
-            <ngx-skeleton-loader fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
+          <ng-container *ngFor="let loader of skeleton.text">
+            <ngx-skeleton-loader class="skeleton" fxLayout="column" [animation]="skeleton.animation" [theme]="loader.theme"></ngx-skeleton-loader>
           </ng-container>
         </ng-template>
 
