--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -58,7 +58,7 @@
 
     <!-- Configuration -->
     <mat-nav-list class="m-0 p-0 last-item">
-      <a mat-list-item [routerLink]="[ '/aula/configuracion' ]" routerLinkActive="active">
+      <a mat-list-item [routerLink]="[ '/classroom/settings' ]" routerLinkActive="active">
         <fa-icon class="mat-hint" icon="cog"></fa-icon>
         <span class="mat-hint pl-h ml-q">{{ 'SETTINGS' | translate}}</span>
       </a>
