--- a/src/app/shared/components/floating-button/floating-button.component.html
+++ b/src/app/shared/components/floating-button/floating-button.component.html
@@ -1,4 +1,4 @@
-<a class="floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}" (click)="toAction()" [ngClass]="{disabled: disabled, pulse: pulse}" [matTooltip]="tooltip | translate" [matTooltipShowDelay]="650">
+<a class="floating-button" mat-flat-button color="primary" attr.arial-label="{{'ADD_STUDENT' | translate}}" (click)="toAction()" [ngClass]="{disabled: disabled, 'pulse-animation': pulse}" [matTooltip]="tooltip | translate" [matTooltipShowDelay]="650">
   <fa-icon class="mat-icon-22" *ngIf="icon" [icon]="icon"></fa-icon>
   <span *ngIf="text" class="text-button">{{text | translate}}</span>
 </a>
