--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -42,7 +42,7 @@
     </mat-form-field>
 
     <!-- Content -->
-    <div class="angular-editor mt-1 pt-h pb-h padding-content-h">
+    <div class="angular-editor mt-1 pt-h pb-h padding-content-h" [ngClass]="{'ng-invalid': this.dayFormGroup.controls.dayContentCtrl.invalid, 'ng-touched': this.dayFormGroup.controls.dayContentCtrl.touched || this.dayFormGroup.touched}">
       <ckeditor id="ckeditor" [editor]="ckeditor" [config]="editorConfig" formControlName="dayContentCtrl">
       </ckeditor>
     </div>
@@ -60,7 +60,7 @@
     <!-- Action buttons -->
     <div>
       <button mat-button color="warn" attr.aria-label="{{'CANCEL' | translate}}" (click)="cancel()">{{'CANCEL' | translate}}</button>
-      <button class="ml-h" mat-flat-button [color]="data.isClone || !data.idDay? 'primary' : 'accent'" mat-dialog-close [disabled]="dayFormGroup.invalid || (dayFormGroup.pristine && !data.isClone)" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{(data.isClone ? 'CLONE' : data.idDay ? 'SAVE' : 'DAY.ADD') | translate}}</button>
+      <button class="ml-h" mat-flat-button [color]="data.isClone || !data.idDay? 'primary' : 'accent'" (click)="save()" attr.aria-label="{{'SAVE' | translate}}">{{(data.isClone ? 'CLONE' : data.idDay ? 'SAVE' : 'DAY.ADD') | translate}}</button>
     </div>
   </footer>
 
